# src/validations/users.js
@@ -4,8 +4,7 @@ const createUserSchema = Joi.object({
     firstName: Joi.string().min(3).max(30).required(),
     lastName: Joi.string().min(3).max(30).required(),
     email: Joi.string().email().required(),
-    password: Joi.string().required(),
-    photo: Joi.string()
+    password: Joi.string().required()
 });
 
 const loginUserSchema = Joi.object({
